--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,8 @@ exclude_generator:
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type:
+
+feed:
+    type: atom
+    path: atom.xml
+    limit: 20
