--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -11,7 +11,9 @@ menu:
   Home: /
   Clubraum: /clubraum
   ## "&Uuml;ber uns": /ueber-uns
-  Bahn: /bahn
+  Eisenbahn: /bahn
+  Modellbau: /modellbau
+  ## Schiffe: /schiff
   Werkstatt: /werkstatt
   Impressum: /impressum
 rss: /atom.xml
