--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -17,7 +17,7 @@ menu:
   Schiffe: /schiff
   Werkstatt: /werkstatt
   Impressum: /impressum
-rss: /atom.xml
+rss: /mcsm-muenchen/atom.xml
 
 # Content
 excerpt_link: Read More
