Bilder von Schiffen, Wackeldackel und Dampfmaschinen eingebaut.

--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -14,7 +14,7 @@ menu:
   Über uns: /ueber-uns
   Eisenbahn: /bahn
   Modellbau: /modellbau
-  Schiffe: /schiff
+  Schiffe: /schiffe
   Werkstatt: /werkstatt
   Impressum: /impressum
 rss: /mcsm-muenchen/atom.xml
